--- a/language/fr.po
+++ b/language/fr.po
@@ -5,8 +5,8 @@
 # 
 # Translators:
 # BADEY Sylvain <mali2003@free.fr>, 2018
-# Laurent Thomas, 2019
 # Daniel Berthereau <daniel.transifex@berthereau.net>, 2019
+# Laurent Thomas, 2019
 # 
 #, fuzzy
 msgid ""
@@ -15,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-08-08 11:15-0400\n"
 "PO-Revision-Date: 2017-09-14 20:14+0000\n"
-"Last-Translator: Daniel Berthereau <daniel.transifex@berthereau.net>, 2019\n"
+"Last-Translator: Laurent Thomas, 2019\n"
 "Language-Team: French (https://www.transifex.com/omeka/teams/14184/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -55,7 +55,7 @@ msgstr ""
 
 #: view/common/options-sidebar.phtml:40
 msgid "Import values as private"
-msgstr ""
+msgstr "Importer les valeurs comme privées"
 
 #: view/csv-import/index/index.phtml:8
 msgid "Import Settings"
@@ -142,7 +142,7 @@ msgstr "Langue:"
 
 #: view/csv-import/index/map.phtml:105
 msgid "Private values"
-msgstr ""
+msgstr "Valeurs privées"
 
 #: view/csv-import/index/past-imports.phtml:7
 msgid "Past Imports"
@@ -183,11 +183,11 @@ msgstr "Annulation en cours"
 
 #: view/csv-import/mapping-sidebar/item-set.phtml:3
 msgid "Item set-specific data"
-msgstr ""
+msgstr "Données spécifiques à la collection"
 
 #: view/csv-import/mapping-sidebar/item.phtml:3
 msgid "Item-specific data"
-msgstr ""
+msgstr "Données spécifiques au contenu"
 
 #: view/csv-import/mapping-sidebar/item.phtml:7
 msgid "Item set (by selected property)"
@@ -205,7 +205,7 @@ msgstr "Source du média"
 
 #: view/csv-import/mapping-sidebar/media.phtml:3
 msgid "Media-specific data"
-msgstr ""
+msgstr "Données spécifiques au média"
 
 #: view/csv-import/mapping-sidebar/media.phtml:7
 msgid "Item (by selected property)"
@@ -759,4 +759,4 @@ msgstr "Donnée du contenu"
 
 #: config/module.config.php:178
 msgid "Omeka resource (by ID)"
-msgstr ""
+msgstr "Ressource Omeka (par ID)"
