--- a/language/fr.po
+++ b/language/fr.po
@@ -5,8 +5,8 @@
 # 
 # Translators:
 # BADEY Sylvain <mali2003@free.fr>, 2018
-# Daniel Berthereau <daniel.transifex@berthereau.net>, 2019
 # Laurent Thomas, 2019
+# Daniel Berthereau <daniel.transifex@berthereau.net>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -15,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-08-08 11:15-0400\n"
 "PO-Revision-Date: 2017-09-14 20:14+0000\n"
-"Last-Translator: Laurent Thomas, 2019\n"
+"Last-Translator: Daniel Berthereau <daniel.transifex@berthereau.net>, 2019\n"
 "Language-Team: French (https://www.transifex.com/omeka/teams/14184/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -305,7 +305,7 @@ msgstr "Séparateur de colonne CSV"
 msgid ""
 "A single character that will be used to separate columns in the csv file."
 msgstr ""
-"Un caractère unique utilisé pour séparé les colonnes dans le fichier CSV."
+"Un caractère unique utilisé pour séparer les colonnes dans le fichier CSV."
 
 #: src/Form/ImportForm.php:93
 msgid "CSV column enclosure"
